# clean_reader

./: .gitignore  Cargo.toml  README.md  config.toml  db.json  debug-clean.html  debug.html  flamegraph.html  index.sass  out.html  template.html
ChromeExtension/: README.md  background.js  cr.js  jquery.js  manifest.json  popup.js
crates/image-actor/: Cargo.toml
crates/image-actor/src/: actor.rs  error.rs  lib.rs  message.rs
crates/page-actor/: Cargo.toml
crates/page-actor/src/: actor.rs  error.rs  lib.rs  message.rs
crates/reader-core/: Cargo.toml
crates/reader-core/src/: cache.rs  cache_error.rs  config.rs  context.rs  error.rs  hash.rs  html_node.rs  html_node_error.rs  http.rs  http_error.rs  lib.rs  pipeline.rs  pipeline_error.rs  render_mode.rs  template.rs  text_parser.rs  title_extractor.rs  urls.rs  utils.rs
crates/reader-core/src/image/: encoder.rs  error.rs  mod.rs  resolved.rs  ticket.rs
crates/reader-core/src/score_implementation/: mod.rs
crates/reader-core/src/text_element/: compound.rs  display.rs  header.rs  html_compiler.rs  mod.rs  parser.rs  row.rs  table.rs  table_cell.rs
crates/reader-core/src/text_element/compiler/: html.rs  mod.rs
crates/reader-core/templates/: article.html
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs
extension/: README.md  background.js  cr.js  manifest.json  popup.css  popup.html  popup.js
flame/: Cargo.toml
flame/src/: html.rs  lib.rs
src/: bench.rs  cache.rs  config.rs  error.rs  html_node.rs  main.rs  pipeline.rs  score.rs  structures.rs  synthax.rs  text_parser.rs  title_extractor.rs  utils.rs  web_server.rs
src/actors/: image.rs  mod.rs  page.rs
src/image/: mod.rs
src/new_arch/: html_node.rs  mod.rs  score.rs  text_element.rs  text_parser.rs  website_data_counter.rs
src/score_implementation/: mod.rs  nsi.rs
src/text_element/: display.rs  mod.rs  parser.rs
src/text_element/compiler/: html.rs  markdown.rs
template/: db.sqlite  db.sqlite-shm  db.sqlite-wal  index.sass  template.html
