[package]
name = "clean_read_v2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26"
markup5ever_rcdom = "0.2"
readability = "0.3"
reqwest = { version = "0.11", features = [
    "blocking",
    "gzip",
    "deflate",
    "cookies",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.8"
actix-web = "4.0.1"
hex = "0.4.3"
sha2 = "0.10.2"
thiserror = "1.0"
base64 = "0.13.0"
dashmap = "5.2.0"
once_cell = "1.8.0"
html-escape = "0.2.9"
regex = "1.5.4"

# Bench
flame = { path = "flame" }

# Image related

ravif = "0.11"
rayon = "1.5.1"
rgb = "0.8.29"
imgref = "1.9.1"
image = "0.24.1"
