[workspace]
resolver = "2"
members = [
    "crates/reader-core",
    "crates/image-actor",
    "crates/page-actor",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2018"

[workspace.dependencies]
# Foundation
thiserror = "1.0"
once_cell = "1.8.0"
anyhow = "1"

# Error sources used via #[from]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "gzip",
    "deflate",
    "cookies",
    "rustls-tls",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.13.0"
image = "0.24.1"

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.8"

# Hashing / text
hex = "0.4.3"
sha2 = "0.10.2"
html-escape = "0.2.9"
regex = "1.5.4"
askama = "0.12"

# HTML / reader
html5ever = "0.26"
markup5ever_rcdom = "0.2"
readability = "0.3"

# Image re-encode
ravif = "0.11"
rayon = "1.5.1"
rgb = "0.8.29"
imgref = "1.9.1"

# Actor framework
ractor = "0.15"

# HTTP server
actix-web = "4.0.1"
tokio = { version = "1", features = ["fs", "rt"] }

# Internal crates
reader-core = { path = "crates/reader-core" }
image-actor = { path = "crates/image-actor" }
page-actor = { path = "crates/page-actor" }
