[package]
name = "reader-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
base64.workspace = true
image.workspace = true
serde.workspace = true
toml.workspace = true
hex.workspace = true
sha2.workspace = true
html-escape.workspace = true
regex.workspace = true
askama.workspace = true
html5ever.workspace = true
markup5ever_rcdom.workspace = true
readability.workspace = true
ravif.workspace = true
rayon.workspace = true
rgb.workspace = true
imgref.workspace = true
tokio.workspace = true
