[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clean_reader"
path = "src/main.rs"

[dependencies]
reader-core.workspace = true
image-actor.workspace = true
page-actor.workspace = true
actix-web.workspace = true
tokio.workspace = true
base64.workspace = true
thiserror.workspace = true
